--- a/book.bib
+++ b/book.bib
@@ -16,3 +16,21 @@
   address = {Bern}, 
   year = {2012}
 }
+
+@article{Waesche2017,
+abstract = {AbstractWhile network analysis is a major methodological approach in many disciplines of the social and natural sciences, it has only recently come into the focus of sport researchers. This article assesses the utility of network analysis to analyze sport phenomena. We begin with an overview of social network analysis (SNA) and related concepts. To explore research topics and approaches, we conduct a systematic review of empirical literature of SNA and its application to sport. Based on this review, we provide a six-dimensional conceptual typology of SNA applications in sport – competition networks, interaction networks, inter-organizational networks, intra-organizational networks, affiliation networks and social environments. Potential future directions for this promising approach in sport research are discussed.},
+author = {W{\"{a}}sche, Hagen and Dickson, Geoff and Woll, Alexander and Brandes, Ulrik},
+doi = {10.1080/16138171.2017.1318198},
+file = {:C$\backslash$:/Users/Admin/Dropbox/Mendeley Bibliothek/W{\"{a}}sche et al/W{\"{a}}sche et al. - 2017 - Social network analysis in sport research an emerging paradigm.pdf:pdf},
+journal = {European Journal for Sport and Society},
+mendeley-groups = {Sport and SNA},
+number = {2},
+pages = {138--165},
+publisher = {Routledge},
+title = {{Social network analysis in sport research: an emerging paradigm}},
+url = {https://doi.org/10.1080/16138171.2017.1318198},
+volume = {14},
+year = {2017}
+}
+
+
