--- a/book.bib
+++ b/book.bib
@@ -9,6 +9,37 @@
   url = {http://yihui.name/knitr/},
 }
 
+@article{Grund2012,
+author = {Grund, Thomas U},
+doi = {https://doi.org/10.1016/j.socnet.2012.08.004},
+file = {:C$\backslash$:/Users/Admin/Dropbox/Mendeley Bibliothek/Grund/Grund - 2012 - Network structure and team performance The case of English Premier League soccer teams.pdf:pdf},
+issn = {0378-8733},
+journal = {Social Networks},
+keywords = {Centralization,Network structure,Soccer,Team performance},
+mendeley-groups = {Sport and SNA},
+number = {4},
+pages = {682--690},
+title = {{Network structure and team performance: The case of English Premier League soccer teams}},
+url = {http://www.sciencedirect.com/science/article/pii/S0378873312000500},
+volume = {34},
+year = {2012}
+}
+
+@article{Gyarmati2014,
+archivePrefix = {arXiv},
+arxivId = {1409.0308},
+author = {Gyarmati, L{\'{a}}szl{\'{o}} and Kwak, Haewoon and Rodriguez, Pablo},
+eprint = {1409.0308},
+file = {:C$\backslash$:/Users/Admin/Dropbox/Mendeley Bibliothek/Gyarmati, Kwak, Rodriguez/Gyarmati, Kwak, Rodriguez - 2014 - Searching for a Unique Style in Soccer.pdf:pdf},
+journal = {Proceedings of ACM KDD Workshop on Large-Scale Sports Analytics},
+mendeley-groups = {Sport and SNA},
+title = {{Searching for a Unique Style in Soccer}},
+url = {http://arxiv.org/abs/1409.0308},
+year = {2014}
+}
+
+
+
 @Book{uniBE2012, 
   title = {Richtlinien der Universitätsleitung betreffend das Vorgehen bei Plagiaten}, 
   author = {{Universität Bern}},
