--- a/2_network_data.Rmd
+++ b/2_network_data.Rmd
@@ -30,17 +30,12 @@ att <- att[att$Name %in% unique_names,]
 att <- att[match(att$Name, unique_names),]
 ```
 
-```{r, echo=FALSE, results='hide'}
+```{r trialfriendsadjmat, echo=FALSE}
 ## plot the network
 ggnet2(friends_adjmat,
        label = TRUE,
        arrow.size = 4, arrow.gap = 0.04, 
-       node.color = att$Position) +
-  ggsave(file = "figures/nwdata_1.pdf", width = 24, height = 20, units = 'cm')
-```
-
-```{r, echo=FALSE}
-knitr::include_graphics(rep("figures/nwdata_1.pdf"))
+       node.color = att$Position) 
 ```
 
 To store the network data leading to the network plot, the sender and target nodes of each edge in the network have to be recorded. There are multiple ways of storing network data. The simplest form is called a `edgelist`, where each row in a data set corresponds to a tie in the network: 
