--- a/2_network_data.Rmd
+++ b/2_network_data.Rmd
@@ -2,6 +2,7 @@
 ## Different formats to store network data
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
+library(knitr)
 library(statnet)
 library(ggplot2)
 library(GGally)
@@ -78,7 +79,7 @@ att
 
 
 
-```{block, type ='task'}
+```{block, type ='rmdtask'}
 Read in the network data of the Swiss national socer team.
 ```
 
