--- a/3_step_by_step_centrality_measures.Rmd
+++ b/3_step_by_step_centrality_measures.Rmd
@@ -17,7 +17,6 @@ We also need the package GGally. GGally contains _ggnet2_, which allows us to cr
 library(GGally)
 ```
 
-ggnet2 is beautifully documented under https://briatte.github.io/ggnet/
 
 ## Objekte vom Typ network
 
@@ -45,10 +44,9 @@ att <- att[match(att$Name, unique_names),]
 friends_adjmat[1:5,1:5]
 ```
 
-We will create two _network_ objects out of this matrix. Objects of type network are a specific way to save networks in R. They are created using the function network().
+We will create two _network_ objects out of this matrix. Remember, objects of type network are a specific way to save networks in R. They are created using the function network().
 
 We first create a directed network with the option directed = T, which we name net_directed.
-Wir erstellen ein gerichtetes Netzwerk-Objekt mit der Option directed = T, welches wir net_directed nennen.
 
 ```{r}
 net_directed <- network(friends_adjmat,directed = T) #make a directed network object
@@ -72,15 +70,15 @@ ggnet2(net_undirected, node.label = T) #plot undirected network
 
 We can now do different operation on these network objects by feeding them into functions. The first operation is already depicted above. With plot() or ggnet2(), we can create network graphics. But we can go a long way beyond this and use more formalized ways of analyzing network structure.
 
-A first operation we can do is to only use the largest connected component of the network for further calculation. This is done here to simplify interpretation.
+A first operation we can do is to only use the largest connected component of the network for further calculation. This is done here to simplify interpretation. A connected component of a network is a part of the network where all nodes are connected in some way. There can be many components in a network, if the network is disconnected into different parts. The largest connected component is the connected component with the most nodes. 
 
 ```{r, results='hide'}
-largest_component <- component.largest(net_undirected)
-adj_mat_largest_comp <- net_undirected[largest_component, largest_component]
-net_undirected <- network(adj_mat_largest_comp, directed = F)
+largest_component <- component.largest(net_undirected) # isolate the largest component
+adj_mat_largest_comp <- net_undirected[largest_component, largest_component] # get the adjacency matrix of the largest component
+net_undirected <- network(adj_mat_largest_comp, directed = F) # recreate our net_undirected, only including the largest component
 
 adj_mat_largest_comp_directed <- net_directed[largest_component, largest_component]
-net_directed <- network(adj_mat_largest_comp_directed, directed = T)
+net_directed <- network(adj_mat_largest_comp_directed, directed = T) #get the directed version
 ```
 
 The network now looks like this - only the largest components remains.
@@ -91,7 +89,7 @@ ggnet2(net_directed, node.label = T, arrow.size = 3, arrow.gap = 0.05) #plot dir
 
 ## Density
 
-First, let's compute the density of the undirected network. We can do this using the function gden(). For most network metrics, it is important if the network is directed or net. We can tell the function about this using the parameter _mode_. Setting mode to "graph", calculates density according to the formula for an undirected network.
+First, let's compute the density of the undirected network. We can do this using the function gden(). For most network metrics, it is important if the network is directed or not. We can tell the gden function about this using the parameter _mode_. Setting mode to "graph", calculates density according to the formula for an undirected network.
 
 ```{r}
 gden(dat = net_undirected,mode = "graph") #calculate with gden function
@@ -103,6 +101,7 @@ Setting mode to digraph, does the same for a directed network.
 gden(net_directed,mode = "digraph")
 ```
 
+Remember, you can always look at the different parameters of R functions using ?function, eg. ?gden
 
 ## Node-level centrality measures
 
@@ -126,7 +125,7 @@ clo <- closeness(net_undirected,gmode = "graph")
 bet <- betweenness(net_undirected,gmode = "graph")
 ```
 
-What do we do with this now. For example, we can create a data frame of all nodes in the undirected network with their respective degree, closeness and betweennes values.
+What do we do with this now? For example, we can create a data frame of all nodes in the undirected network with their respective degree, closeness and betweennes values.
 
 To do so, we combine the three vectors in a data frame.
 
@@ -135,21 +134,11 @@ centrality_df <- data.frame(bet, clo, deg, row.names = rownames(adj_mat_largest_
 round(centrality_df,digits = 2) #just a bit of rounding.
 ```
 
-Let's now size the nodes in our visualization according to betweenness. Who holds the network together?
+Let's now size the nodes in our visualization according to betweenness. Who holds the network together? It looks like it's Fabian Schär.
 
 ```{r}
 ggnet2(net_undirected, node.label = T, node.size = centrality_df$bet) #plot undirected network
 ```
-
-We can now for example look at correlation between our centrality measures (these are usually quite high).
-
-```{r}
-cor(centrality_df)
-```
-
-Das Resultat zeigt auf, dass die verschiedenen Zentralitätsmasse stark miteinander korreliert sind. Dies ist meistens der Fall.
-
-
 
 
 ## Global centrality measures
